# ENS-Manager-Client

./: .env  .gitignore  LICENSE  README.md  assistant_snippet_inQsxnfs0H.txt  assistant_snippet_zZP0CiNroy.txt  pyproject.toml
docs/: API.md
ens_manager/: __init__.py  cli_app.py  config.py  config_manager.py  ens_operations.py  notifications.py  ui_manager.py
ens_manager/config/: config_manager.py
examples/: example_usage.py
scripts/: interface_test.py  interface_test_results.json  manage.py  setup_dev.sh  test_cli_app.py
src/: cli.py  cli_app.py  config_manager.py  ui_manager.py
tests/: test_ens_manager.py
